@@ -51,6 +51,7 @@ In some cases you may want to set the following options:
 -DR_INCLUDE
 	path to R include files. Almost certainly this option is not needed.
 
+Further generic options are listed on http://www.cmake.org/Wiki/CMake_Useful_Variables .
 
 Installation
 ==================
